assignment3/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume               # Name of the volume
          mountPath: /etc/nginx/conf.d      # Mount path in the container
      volumes:
      - name: config-volume                 # Name of the volume
        configMap:
          name: nginx-configmap             # Name of the ConfigMap
