assignment3/app-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-service         # Name of the Service
spec:
  ports:
  - port: 8080                # Port on which the Service listens
    protocol: TCP
    targetPort: 3000          # Port on the Pod to forward to
  selector:
    app: app-1                # Selector to match Pods
  type: ClusterIP             # Type of Service
