assignment3/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service       # Name of the Service
spec:
  ports:
    - port: 80              # Port on which the Service listens
      protocol: TCP
      targetPort: 80        # Port on the Pod to forward to
  selector:
    app: nginx              # Selector to match Pods
  type: ClusterIP           # Type of Service
