assignment3/app-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1-ingress                   # Name of the Ingress
spec:
  rules:
  - http:
      paths:
      - path: /                         # Path within the host
        pathType: Prefix                # Type of path matching
        backend:
          service:
            name: app-1-service         # Name of the backend Service
            port:
              number: 8080              # Port of the backend Service
