assignment3/app-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2-ingress       # Name of the Ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"          # Enable canary deployment
    nginx.ingress.kubernetes.io/canary-weight: "30"     # Set canary weight to 30%
spec:
  rules:
  - http:
      paths:  
      - path: /                 # Path within the host
        pathType: Prefix        # Type of path matching
        backend:
          service:
            name: app-2-service   # Name of the backend Service
            port:
              number: 8080        # Port of the backend Service
